# NeoMind_agent

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  ARCHITECTURE.md  CLAUDE.md  Dockerfile  EXAMPLES.md  LICENSE  MANIFEST.in  Makefile  NeoMind-Fin_Competitive_Research_Report.md  NeoMind-Fin_First_Principles_Priorities.md  PHASE3_SUMMARY.txt  PHASE4_EVOLUTION.md  PHASE4_IMPLEMENTATION_REPORT.md  PHASE4_QUICK_START.md  README.md  SEARCH_IMPROVEMENT_PLAN.md  SEARCH_USAGE_GUIDE.md  TEST_DOCUMENTATION.md  TROUBLESHOOTING.md  WORKFLOW_INTEGRATION.md  agent.py  agent_config.py  cli.py  dev_test.py  docker-compose.connect.yml  docker-compose.yml  docker-entrypoint.sh  logging_setup.py  main.py  pyproject.toml  rebuild_spa.command  requirements.txt  restart_dashboard.command  run_all_infrastructure_tests.py  supervisord.conf  test_classification.py  test_command_handlers.py  (+11 more)
.claude/: settings.json
agent/: __init__.py  base_personality.py  cli_command_system.py  code_analyzer.py  command_executor.py  config.yaml  context_builder.py  context_manager.py  core.py  formatter.py  help_system.py  llm_service.py  llm_url_guard.py  message_normalizer.py  natural_language.py  persistent_bash.py  planner.py  prompt_composer.py  query_engine.py  safety.py  search.py  search_engine.py  search_legacy.py  self_iteration.py  state_manager.py  task_manager.py  token_budget.py  tool_parser.py  tool_schema.py  tools.py  workspace_manager.py
agent/agentic/: __init__.py  agentic_loop.py  builtin_agents.py  coordinator.py  denial_tracker.py  error_recovery.py  feature_gate_registry.py  stop_hooks.py  swarm.py  token_budget.py
agent/browser/: __init__.py  daemon.py
agent/code_index/: __init__.py  indexer.py
agent/coding/: __init__.py  code_analyzer.py  persistent_bash.py  tool_parser.py  tool_schema.py  tools.py  workspace_manager.py
agent/compression/: __init__.py  base.py  relevance.py  summarization.py  tool_result.py  truncation.py
agent/config/: base.yaml  chat.yaml  coding.yaml  fin.yaml  lattice_taxonomy.yaml  router_visible_models.yaml
agent/constants/: __init__.py  models.py
agent/data/: __init__.py  collector.py  compliance.py  intelligence.py  rate_limiter.py
agent/data_sources/: market.py  sec_edgar.py
agent/evolution/: __init__.py  agentspec.py  auto_dream.py  auto_evolve.py  canary_deploy.py  checkpoint.py  cost_optimizer.py  dashboard.py  debate_consensus.py  (+21 more)
bench/: selftest_loop.py
cli/: claude_interface.py  completers.py  fleet_app.py  input_handlers.py  interface.py  neomind_interface.py  progress_display.py
deepseek_agent_v0/: agent_config.py  config.yaml  main.py  requirements.txt
docs/: AGENT_TEAM_TESTING_PATTERN.md  CANARY_BOT_SETUP.md  CANARY_NIGHTLY_SMOKE_DESIGN.md  CLI_SELF_TEST_ITERM2.md  PHASE_C_CLOSING_CHECKLIST.md  SELF_EVOLUTION.md  SELF_TEST.md  TELEGRAM_SELF_TEST.md
fleet/: __init__.py  launch_project.py  project_config.py  project_schema.py  run.py  session.py  transcripts.py  worker_turn.py
ikol1729_agent/: __init__.py  __main__.py
neomind/: __init__.py  __main__.py
plans/: 2026-03-14_mode-split.md  2026-03-14_tool-upgrade.md  2026-03-15_agentic-ux.md  2026-03-15_formalized-tool-system.md  2026-03-15_multi-provider.md  2026-03-22_bidirectional-provider-sync.md  2026-03-22_gstack-full-integration.md  2026-03-22_obsidian-implementation-plan.md  2026-03-22_obsidian-vault-integration.md  2026-03-22_provider-sync-architecture.mermaid  2026-03-22_skill-consolidation.md  2026-03-28_PLAN-INDEX.md  2026-03-28_architecture-redesign.md  2026-03-28_enhanced-evolution-plan.md  2026-03-28_evolution-addendum-v4.1.md  2026-03-28_plan-diffs.md  2026-03-28_research-consolidated.md  2026-03-28_research-round-1.md  2026-03-28_research-round-2.md  2026-03-28_research-round-3.md  2026-03-28_research-round-4.md  2026-03-28_research-round-5.md  2026-03-28_self-evolution-implementation.md  2026-03-28_self-evolution-integration-plan.md  2026-03-28_self-evolution-strategy-v2.md  2026-03-28_self-evolution-strategy.md  2026-03-29_evolution-plan-v4.md  2026-03-30_async-agentic-loop-refactor.md  2026-04-10_slash-command-audit-per-command.md  2026-04-10_slash-command-taxonomy-v3.md  2026-04-10_slash-command-taxonomy-v5-with-validation.md  2026-04-11_personality_fleet_merge_plan.md  2026-04-11_todo_activation_closed_loop.md  2026-04-12_fin_deepening_fusion_plan.md  2026-04-12_phase4_fleet_llm_loop.md  2026-04-19_fin_dashboard_fusion.md  2026-04-19_frontend_architecture_final.md  2026-04-19_openbb_backend_integration.md  2026-04-20_insight-lattice.md  2026-04-20_synthesis-dashboard.md  (+19 more)
scripts/: add_quantitative_profiles.py  gen_architecture.py  gen_miniflux_creds.sh  get-openclaw-token.sh  install-hooks.sh  neomind_fin_autostart.py  regime_backfill.py  seed_miniflux_feeds.py  setup-provider-sync.sh  sync_launchd_env.sh
tests/: COMPREHENSIVE_TEST_PLAN.md  README.md  TEST_CHECKLIST.md  TEST_INTEGRATION_HOOKS_README.md  __init__.py  conftest.py  integration_test_ctrl_o_response.py  root_test_auto_mode_switch.py  root_test_classification.py  root_test_command_router.py  root_test_config.py  root_test_feature_parity.py  root_test_mode_switching.py  root_test_safety_command_integration.py  root_test_safety_integration.py  run_tests.py  test_advanced_tools.py  test_agent_audit.py  test_agent_collab_full.py  test_agent_config_contextvar.py  test_agent_transcript.py  test_agentic_loop.py  test_agentic_loop_canonical.py  test_architecture.py  test_browser_daemon_full.py  test_chat_store_full.py  test_chat_stream.py  test_chat_supervisor.py  test_claude_interface.py  test_cli_agentic_refactor.py  test_cli_command_system.py  test_cn_data.py  test_code_analyzer.py  test_command_executor.py  test_command_handlers.py  test_completers.py  test_config.py  test_config_editor_full.py  test_context_builder.py  test_context_manager.py  (+173 more)
web/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
xbar/: neomind-provider.1m.sh  neomind-unified.1m.py  provider-ctl.py  restart-bot.sh  start-bot.sh  switch-provider.sh  view-bot-logs.sh  view-llm-logs.sh
(+800 files in other folders)
