[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ikol1729-agent"
version = "0.1.0"
description = "DeepSeek AI Agent - LLM-based agent for personal usage"
readme = "README.md"
authors = [
    {name = "ikol1729", email = "ikol1729@gmail.com"}
]
license = {file = "LICENSE"}
keywords = ["deepseek", "ai", "agent", "llm", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "hydra-core>=1.3.0",
    "PyYAML>=6.0",
    "prompt_toolkit>=3.0.0",
    "rich>=13.0.0",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
full = [
    "lxml>=4.9.0",
    "html2text>=2020.1.16",
    "chardet>=5.0.0",
    "requests-html>=0.10.0",
    "trafilatura>=1.4.0",
    "tiktoken>=0.5.0",
]
dev = [
    "pytest",
    "black",
    "isort",
]

[project.scripts]
ikol1729-agent = "main:main"

[tool.setuptools]
packages = ["agent", "cli", "ikol1729_agent"]
py-modules = ["agent_config", "main"]
include-package-data = true

[tool.setuptools.package-data]
"agent" = ["config.yaml"]