[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neomind"
version = "0.2.0"
description = "NeoMind — Multi-provider CLI coding agent and personal assistant"
readme = "README.md"
authors = [
    {name = "neomind", email = "removed@example.com"}
]
license = {file = "LICENSE"}
keywords = ["neomind", "ai", "agent", "llm", "cli", "deepseek", "glm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "PyYAML>=6.0",
    "prompt_toolkit>=3.0.0",
    "rich>=13.0.0",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
full = [
    "lxml>=4.9.0",
    "html2text>=2020.1.16",
    "chardet>=5.0.0",
    "requests-html>=0.10.0",
    "trafilatura>=1.4.0",
    "tiktoken>=0.5.0",
]
finance = [
    "finnhub-python>=2.4.0",
    "yfinance>=0.2.30",
    "akshare>=1.10.0",
    "feedparser>=6.0.0",
    "cryptography>=41.0.0",
    "keyring>=24.0.0",
    "sympy>=1.12",
    "websockets>=12.0",
    "trafilatura>=1.4.0",
    "duckduckgo-search>=4.0.0",
    "python-telegram-bot>=20.0",
    "playwright>=1.40.0",
]
rag = [
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.0",
    "PyPDF2>=3.0.0",
]
dev = [
    "pytest",
    "black",
    "isort",
]

[project.scripts]
neomind = "main:main"

[tool.setuptools]
packages = ["agent", "agent.finance", "agent.browser", "agent.workflow", "agent.skills", "cli", "neomind"]
py-modules = ["agent_config", "main"]
include-package-data = true

[tool.setuptools.package-data]
"agent" = ["config/*.yaml"]